selfhost/test/typechecker/binary/plus_error.2.out
Error at %FILE_NAME%:1:5
Illegal operator
  |  123 + [1, 2]
         ^
No operator '+' exists between types Int and Int[]
